--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -577,7 +577,7 @@ nav {
 }
 .site-nav-main {
 	position: absolute;
-	top:9.688em;	
+	top:7.375em;	
 }
 
 // Begin Navicon hamburger/x 
@@ -801,7 +801,7 @@ html[xmlns] .slides {display: block;}
 /*//////////////Seth Custom Added ////////////////*/
 
 .flexslider {
-	padding: 1.25em 1.25em .5em 1.25em;
+	padding: 1.25em 1.25em 1.3em 1.25em;
 	background-color:rgba(238,238,238,1.0);
 	@media screen and (min-width: $width-medium) { 
 		padding: 5em 5em 2em 5em;
