Added Touch Icons and Updated Resume
I added touch icons and the favicon. I updated my resume to match the
new website design. Tweaked some CSS and fixed a minor typo.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -138,10 +138,16 @@ body {
   margin: 0;
   background-color: #dddddd; }
 
-header, footer, .documentation {
+header, footer {
   padding: 1.4em; }
   @media screen and (min-width: 56.25em) {
-    header, footer, .documentation {
+    header, footer {
+      padding: 2.5em; } }
+
+.documentation {
+  padding: 1.4em; }
+  @media screen and (min-width: 22.5em) {
+    .documentation {
       padding: 2.5em; } }
 
 header {
