Adjusting some minor alignment issues
Adjusting some minor alignment issues

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -106,8 +106,8 @@ p, ul {
     padding-bottom: 0; }
     @media screen and (min-width: 56.25em) {
       p.photo-credit, ul.photo-credit {
-        padding-left: 1.5em;
-        padding-right: 1.5em;
+        padding-left: 1.7em;
+        padding-right: 1.7em;
         max-width: 87.667em; } }
 
 em {
@@ -198,13 +198,21 @@ a {
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out; }
 
-h2 + p, h3 + p, h2 + ul, h3 + ul {
+h2 + p, h2 + ul {
   padding-left: .6em;
   padding-right: .6em; }
   @media screen and (min-width: 56.25em) {
-    h2 + p, h3 + p, h2 + ul, h3 + ul {
+    h2 + p, h2 + ul {
       padding-left: .8em;
       padding-right: .8em; } }
+
+h3 + p, h3 + ul {
+  padding-left: .6em;
+  padding-right: .6em; }
+  @media screen and (min-width: 56.25em) {
+    h3 + p, h3 + ul {
+      padding-left: .6em;
+      padding-right: .6em; } }
 
 .main-wrapper {
   position: relative;
@@ -238,7 +246,8 @@ h2 + p, h3 + p, h2 + ul, h3 + ul {
 .thumb-text-wrap {
   padding: 1.4em; }
   .thumb-text-wrap h3 {
-    color: #212121; }
+    color: #212121;
+    line-height: 1.33em; }
   @media screen and (min-width: 56.25em) {
     .thumb-text-wrap {
       padding: .75em 0 0 0; } }
@@ -449,7 +458,7 @@ footer {
   padding: 0 .6em; }
   @media screen and (min-width: 56.25em) {
     .copyright {
-      padding: 0 .9em; } }
+      padding: 0 1.1em; } }
 
 nav {
   overflow: hidden;
