--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -870,7 +870,7 @@ html[xmlns] .slides {
   border-radius: 0.625em;
   font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif;
   font-size: 100%;
-  padding: 1em 2em;
+  padding: .8em 2em;
   cursor: pointer;
   border: 1px solid #757575;
   -webkit-transition: all .2s ease-in-out;
@@ -878,13 +878,13 @@ html[xmlns] .slides {
   -o-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   display: block;
-  margin: 0 .6em; }
+  margin: 0 .6em 1em .6em; }
   #mc_embed_signup .button:hover {
     background-color: #424242;
     border: 1px solid #424242; }
   @media screen and (min-width: 56.25em) {
     #mc_embed_signup .button {
-      margin: 0em .9em; } }
+      margin: 0 .5em 0 .5em; } }
 
 #mc_embed_signup label {
   font-size: 150%;
@@ -948,8 +948,8 @@ html[xmlns] .slides {
   padding-right: .6em; }
   @media screen and (min-width: 56.25em) {
     #mc_embed_signup .indicates-required {
-      padding-left: .9em;
-      padding-right: .9em; } }
+      padding-left: .5em;
+      padding-right: .5em; } }
 
 #mc_embed_signup .mc-field-group {
   width: 100%;
@@ -957,7 +957,7 @@ html[xmlns] .slides {
   padding: 0em .6em; }
   @media screen and (min-width: 56.25em) {
     #mc_embed_signup .mc-field-group {
-      padding: 0em .9em; } }
+      padding: 0em .5em; } }
 
 #mc_embed_signup .mc-field-group .asterisk {
   position: absolute;
