--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -871,7 +871,7 @@ html[xmlns] .slides {display: block;}
 	@include rounded(.625em);
 	font-family:$font-sans;
 	font-size:100%;
-	padding:1em 2em;
+	padding:.8em 2em;
 	cursor:pointer;
 	border:1px solid rgba(117,117,117,1.0);
 	-webkit-transition: all .2s ease-in-out;
@@ -879,13 +879,13 @@ html[xmlns] .slides {display: block;}
   	-o-transition: all .2s ease-in-out;
   	transition: all .2s ease-in-out;
 	display:block;
-	margin:0 .6em;
+	margin:0 .6em 1em .6em;
 	&:hover {
 		background-color: rgba(66,66,66,1.0);
 		border:1px solid rgba(66,66,66,1.0);	
 	}
 	@media screen and (min-width: $width-medium) { 
-		margin:0em .9em;
+		margin:0 .5em 0 .5em;
 	}
 }
 #mc_embed_signup label {
@@ -919,8 +919,8 @@ html[xmlns] .slides {display: block;}
 	padding-left:.6em;
 	padding-right:.6em;	
 	@media screen and (min-width: $width-medium) { 
-		padding-left:.9em;
-		padding-right:.9em;
+		padding-left:.5em;
+		padding-right:.5em;
 	}
 }
 #mc_embed_signup .mc-field-group{
@@ -928,7 +928,7 @@ html[xmlns] .slides {display: block;}
 	max-width:27em;
 	padding:0em .6em;
 	@media screen and (min-width: $width-medium) { 
-		padding:0em .9em;
+		padding:0em .5em;
 	}
 }
 #mc_embed_signup .mc-field-group .asterisk{position:absolute;right:1.25em;top:.4em;font-size:150%}
