--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -297,8 +297,15 @@ h3 + p, h3 + ul {
 	img {
 		opacity:1.0;
 	}
+}
+.thumb-image-left {
 	@media screen and (min-width: $width-medium) {
 		padding: 2.5em 1.25em 0em 2.5em;
+	}
+}
+.thumb-image-right {
+	@media screen and (min-width: $width-medium) {
+		padding: 2.5em 2.5em 0em 1.25em;
 	}
 }
 html.no-touch .thumb-image img {
