--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -52,6 +52,9 @@ header, footer { padding: 1.4em; }
 
 .documentation { padding: 1.4em; }
 @media screen and (min-width: 30em) { .documentation { padding: 2.5em; } }
+.documentation.process h3.title { border-bottom: none; }
+.documentation.process .project-detail-heading { padding-left: .85em; padding-right: .85em; }
+.documentation.process .project-detail-content { padding-left: .6em; padding-right: .6em; padding-bottom: .6em; }
 
 header { background-color: #eeeeee; }
 
@@ -79,8 +82,8 @@ a { text-decoration: none; -webkit-transition: all .2s ease-in-out; -moz-transit
 h2 + p, h2 + ul { padding-left: .6em; padding-right: .6em; }
 @media screen and (min-width: 56.25em) { h2 + p, h2 + ul { padding-left: .8em; padding-right: .8em; } }
 
-h3 + p, h3 + ul { padding-left: .6em; padding-right: .6em; }
-@media screen and (min-width: 56.25em) { h3 + p, h3 + ul { padding-left: .6em; padding-right: .6em; } }
+h3 + p, h3 + ul, h3 + p + p { padding-left: .6em; padding-right: .6em; }
+@media screen and (min-width: 56.25em) { h3 + p, h3 + ul, h3 + p + p { padding-left: .6em; padding-right: .6em; } }
 
 .main-wrapper { position: relative; margin: 0 auto; max-width: 90em; width: 100%; background-color: white; }
 
