--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -123,7 +123,7 @@ p, ul {
 		font-weight:700;
 		padding-bottom:0;
 		text-transform:uppercase;
-		color:rgba(0,0,0,1.0);	
+		color:rgba(0,0,0,1.0);
 	}
 	&.project-detail-content {
 		padding-bottom:.9em;	
@@ -190,6 +190,20 @@ header, footer {
 	@media screen and (min-width: $width-tiny) { 
 		padding: $section-spacing-wide;
 	}
+	&.process {
+		h3.title {
+			border-bottom:none;	
+		}
+		.project-detail-heading {
+			padding-left:.85em;
+			padding-right: .85em;		
+		}
+		.project-detail-content {
+			padding-left:.6em;
+			padding-right: .6em;	
+			padding-bottom:.6em;	
+		}	
+	}
 }
 header {
 	background-color:rgba(238,238,238,1.0);
@@ -243,7 +257,7 @@ h2 + p, h2 + ul {
 		}		
 }
 
-h3 + p, h3 + ul {
+h3 + p, h3 + ul, h3 + p + p {
 	padding-left:.6em;
 	padding-right: .6em;	
 		@media screen and (min-width: $width-medium) { 
