--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -391,6 +391,9 @@ html.no-touch .thumb-image img {
 .running {
 	background-color:rgba(204,195,100,1.0);	
 }
+.theakkermans {
+	background-color:rgba(190,190,190,1.0);
+}
 .dark {
 	background-color:rgba(66,66,66,1.0);	
 	color:rgba(255,255,255,1.0);
