--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -45,7 +45,7 @@ em { font-style: italic; }
 
 div, article, section, header, footer, nav, figure, li { position: relative; }
 
-body { padding: 0; margin: 0; background-color: #dddddd; }
+body { padding: 0; margin: 0; background-color: #eeeeee; }
 
 header, footer { padding: 1.4em; }
 @media screen and (min-width: 30em) { header, footer { padding: 2.5em; } }
@@ -57,6 +57,7 @@ header, footer { padding: 1.4em; }
 .documentation.process .project-detail-content { padding-left: .6em; padding-right: .6em; padding-bottom: .6em; }
 
 header { background-color: #eeeeee; }
+@media screen and (min-width: 56.25em) { header { border-left: 1px solid #dddddd; border-right: 1px solid #dddddd; } }
 
 ul { list-style: none; }
 
