--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -64,6 +64,7 @@ Well hello there! Thanks for taking a look around. If you are curious about the 
 $width-tiny: 30em; 
 // 900px / 16 = 56.250em
 $width-medium: 56.250em; 
+$width-max: 90em;
 $font-sans: "ff-tisa-sans-web-pro","Helvetica Neue",Helvetica,sans-serif;
 $font-serif: "ff-tisa-web-pro",Georgia,serif;
 // This number should be reflected in .left_container, .right_container, and .bottom-nav as well.
@@ -177,7 +178,7 @@ nav,
 figure,
 li { position:relative; }
 
-body { padding:0; margin:0;	background-color: rgba(221,221,221,1.0); }
+body { padding:0; margin:0;	background-color: rgba(238,238,238,1.0); }
 
 header, footer {
 	padding: $section-spacing-narrow;
@@ -207,6 +208,10 @@ header, footer {
 }
 header {
 	background-color:rgba(238,238,238,1.0);
+	@media screen and (min-width: $width-medium) { 
+		border-left:1px solid rgba(221,221,221,1.0);
+		border-right:1px solid rgba(221,221,221,1.0);
+	}
 }
 ul { list-style:none; }
 li { list-style-type:none; }
@@ -270,7 +275,7 @@ h3 + p, h3 + ul, h3 + p + p {
 .main-wrapper {
 	position:relative;
 	margin: 0 auto;
-	max-width:90em;
+	max-width:$width-max;
 	width:100%;
 	background-color:rgba(255,255,255,1.0);
 }
@@ -559,7 +564,7 @@ nav {
 	position:relative;
 	width:100%;
 	z-index:100;
-	max-width:90em;
+	max-width:$width-max;
 	margin:0 auto;
 	padding:2em 1.75em;
 	background-color:rgba(255,255,255,1.0);
