Added the portfolio page for Absolute Horseradish
Added the portfolio page for Absolute Horseradish. Also updated the
index page and necessary back/next links throughout the website.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -415,6 +415,12 @@ html.no-touch .thumb-image img {
 .scadux, .logo-color {
 	background-color:rgba(230,230,230,1.0);	
 }
+.absolutehorseradish {
+	background-color:rgba(78,201,155,1.0);	
+}
+.absolutehorseradish-video {
+	background-color:rgba(0,0,0,0.15);	
+}
 .project-types {
 	@include small-sub-text;
 	margin-bottom:2em;
