--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -140,6 +140,10 @@ html.no-touch .thumb-image img:hover { opacity: 1.0; }
 
 .scadux, .logo-color { background-color: #e6e6e6; }
 
+.absolutehorseradish { background-color: #4ec99b; }
+
+.absolutehorseradish-video { background-color: rgba(0, 0, 0, 0.15); }
+
 .project-types { font: 400 100%/1.65 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; color: #616161; text-transform: uppercase; letter-spacing: .05em; margin-bottom: 2em; padding-bottom: 0; }
 
 .read-more { display: none; }
