--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -86,6 +86,7 @@ h3 + p, h3 + ul, h3 + p + p { padding-left: .6em; padding-right: .6em; }
 @media screen and (min-width: 56.25em) { h3 + p, h3 + ul, h3 + p + p { padding-left: .05em; padding-right: .05em; } }
 
 .main-wrapper { position: relative; margin: 0 auto; max-width: 90em; width: 100%; background-color: white; }
+@media screen and (min-width: 56.25em) { .main-wrapper { margin-bottom: 4em; } }
 
 .title { font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; padding: 0; width: 100%; }
 @media screen and (min-width: 56.25em) { .title { max-width: 20em; } }
@@ -163,6 +164,8 @@ ul li a { color: rgba(61, 61, 61, 0.6); -webkit-transition: all .2s ease-in-out;
 ul li a.current { color: black; }
 html.no-touch ul li a:hover { color: rgba(61, 61, 61, 0.85); }
 
+.footer-wrapper { margin: 0 auto; width: 100%; background-color: #424242; }
+
 .bottom-nav { background-color: #757575; margin-top: 0; text-align: center; padding: 2.5em 0; }
 @media screen and (min-width: 56.25em) { .bottom-nav { padding: 2.5em; } }
 .bottom-nav button { display: inline; }
@@ -171,23 +174,25 @@ html.no-touch ul li a:hover { color: rgba(61, 61, 61, 0.85); }
 .bottom-nav .bottom-nav-text { display: none; }
 @media screen and (min-width: 56.25em) { .bottom-nav .bottom-nav-text { display: inline; } }
 
-footer { background-color: #424242; color: white; padding: 1.4em; }
+footer { color: white; max-width: 90em; margin: 0 auto; padding: 1.4em; }
 footer ul { margin-bottom: 1.25em; }
 footer ul li a { color: rgba(255, 255, 255, 0.7); }
 html.no-touch footer ul li a:hover { color: white; }
 @media screen and (min-width: 56.25em) { footer ul li { display: inline-block; } }
-@media screen and (min-width: 56.25em) { footer { padding: 2.5em 9em; }
+@media screen and (min-width: 56.25em) { footer { padding: 2.5em 2.5em; }
   footer ul li { margin-right: 1.25em; }
   footer ul li:last-child { margin-right: 0; } }
 
 .copyright { font: 400 75%/1.65 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; text-transform: uppercase; letter-spacing: .1em; color: rgba(255, 255, 255, 0.7); padding: 0 .6em; }
 @media screen and (min-width: 56.25em) { .copyright { padding: 0 .3em; } }
 
-nav { overflow: hidden; position: relative; width: 100%; z-index: 100; margin: 0 auto; padding: 2em 1.75em; background-color: white; }
+.nav-wrapper { margin: 0 auto; width: 100%; background-color: white; }
+
+nav { overflow: hidden; position: relative; width: 100%; max-width: 90em; z-index: 100; margin: 0 auto; padding: 2em 1.75em; background-color: white; }
 nav h1 { line-height: 2.25; }
 nav ul { font-size: 110%; }
 @media screen and (min-width: 30em) { nav { padding: 2em 2.75em; } }
-@media screen and (min-width: 56.25em) { nav { display: block; padding: 3em 9em; height: 9.688em; } }
+@media screen and (min-width: 56.25em) { nav { display: block; padding: 3em 2.5em; height: 9.688em; } }
 
 .header-logo { font-size: 150%; float: left; display: block; z-index: 100; position: relative; }
 .header-logo a { color: inherit; }
