--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -34,8 +34,8 @@ p a:hover, ul a:hover { color: black; }
 p.project-detail-heading, ul.project-detail-heading { font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 85%; letter-spacing: .138em; font-weight: 700; padding-bottom: 0; text-transform: uppercase; color: black; }
 p.project-detail-content, ul.project-detail-content { padding-bottom: .9em; }
 p.project-detail-content:last-child, ul.project-detail-content:last-child { padding-bottom: 1.25em; }
-p.photo-credit, ul.photo-credit { font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 50%; letter-spacing: .138em; text-transform: uppercase; color: #999999; padding-left: 1.2em; padding-right: 1.2em; padding-bottom: 0; }
-@media screen and (min-width: 56.25em) { p.photo-credit, ul.photo-credit { padding-left: 1.7em; padding-right: 1.7em; max-width: 87.667em; } }
+p.photo-credit, ul.photo-credit { font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 50%; letter-spacing: .138em; text-transform: uppercase; color: #999999; padding-left: 0.2em; padding-right: 0.2em; padding-bottom: 0; margin-top: 1em; }
+@media screen and (min-width: 56.25em) { p.photo-credit, ul.photo-credit { max-width: 87.667em; padding-left: 0.2em; padding-right: 0.2em; } }
 
 em { font-style: italic; }
 
@@ -47,10 +47,10 @@ div, article, section, header, footer, nav, figure, li { position: relative; }
 
 body { padding: 0; margin: 0; background-color: #eaeaea; }
 
-header { padding: 1.4em; }
+header { padding: 1.75em; }
 @media screen and (min-width: 30em) { header { padding: 3.5em 2.5em 3.5em 2.5em; } }
 
-.documentation { padding: 1.4em; }
+.documentation { padding: 1.75em; }
 @media screen and (min-width: 30em) { .documentation { padding: 2.5em; } }
 .documentation.process h3.title { border-bottom: none; }
 .documentation.process .project-detail-heading { padding-left: .85em; padding-right: .85em; }
@@ -79,24 +79,24 @@ img + img { margin-top: .15em; }
 
 a { text-decoration: none; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
 
-h2 + p, h2 + ul { padding-left: .6em; padding-right: .6em; }
+h2 + p, h2 + ul { padding-left: 0; padding-right: 0; }
 @media screen and (min-width: 56.25em) { h2 + p, h2 + ul { padding-left: .1em; padding-right: .1em; } }
 
-h3 + p, h3 + ul, h3 + p + p { padding-left: .6em; padding-right: .6em; }
+h3 + p, h3 + ul, h3 + p + p { padding-left: 0; padding-right: 0; padding-top: .25em; }
 @media screen and (min-width: 56.25em) { h3 + p, h3 + ul, h3 + p + p { padding-left: .05em; padding-right: .05em; } }
 
 .main-wrapper { position: relative; margin: 0 auto; max-width: 90em; width: 100%; background-color: white; }
 @media screen and (min-width: 56.25em) { .main-wrapper { margin-bottom: 4em; } }
 
-.title { font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; padding: 0; width: 100%; }
-@media screen and (min-width: 56.25em) { .title { max-width: 20em; } }
+.title { font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; padding: 0; width: 100%; line-height: 1.4; }
+@media screen and (min-width: 56.25em) { .title { max-width: 20em; line-height: inherit; } }
 
 .column_content { width: 100%; overflow: hidden; display: table; height: 100%; }
 
 .last-project-column + .bottom-nav { margin-top: 0em; }
 @media screen and (min-width: 56.25em) { .last-project-column + .bottom-nav { margin-top: 2.5em; } }
 
-.thumb-text-wrap { padding: 1.4em; }
+.thumb-text-wrap { padding: 1.75em; }
 .thumb-text-wrap h3 { color: #212121; line-height: 1.33em; }
 @media screen and (min-width: 56.25em) { .thumb-text-wrap { padding: .75em 0 0 0; } }
 
@@ -174,7 +174,7 @@ html.no-touch ul li a:hover { color: rgba(61, 61, 61, 0.85); }
 .bottom-nav .bottom-nav-text { display: none; }
 @media screen and (min-width: 56.25em) { .bottom-nav .bottom-nav-text { display: inline; } }
 
-footer { color: white; max-width: 90em; margin: 0 auto; padding: 1.4em; }
+footer { color: white; max-width: 90em; margin: 0 auto; padding: 1.75em; }
 footer ul { margin-bottom: 1.25em; }
 footer ul li a { color: rgba(255, 255, 255, 0.7); }
 html.no-touch footer ul li a:hover { color: white; }
@@ -183,7 +183,7 @@ html.no-touch footer ul li a:hover { color: white; }
   footer ul li { margin-right: 1.25em; }
   footer ul li:last-child { margin-right: 0; } }
 
-.copyright { font: 400 75%/1.65 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; text-transform: uppercase; letter-spacing: .1em; color: rgba(255, 255, 255, 0.7); padding: 0 .6em; }
+.copyright { font: 400 75%/1.65 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; text-transform: uppercase; letter-spacing: .1em; color: rgba(255, 255, 255, 0.7); padding: 0 .2em; }
 @media screen and (min-width: 56.25em) { .copyright { padding: 0 .3em; } }
 
 .nav-wrapper { margin: 0 auto; width: 100%; background-color: white; }
@@ -326,14 +326,14 @@ html[xmlns] .slides { display: block; }
 
 #mc_embed_signup input:focus { outline: none; }
 
-#mc_embed_signup .button { color: white; background-color: #757575; -webkit-border-radius: 0.625em; -moz-border-radius: 0.625em; border-radius: 0.625em; font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 100%; padding: .8em 2em; cursor: pointer; border: 1px solid #757575; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; display: block; margin: 0 .6em 1em .6em; }
+#mc_embed_signup .button { color: white; background-color: #757575; -webkit-border-radius: 0.625em; -moz-border-radius: 0.625em; border-radius: 0.625em; font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 100%; padding: .75em 1.5em; cursor: pointer; border: 1px solid #757575; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; display: block; margin: 0 0 2em 0; }
 #mc_embed_signup .button:hover { background-color: #424242; border: 1px solid #424242; }
-@media screen and (min-width: 56.25em) { #mc_embed_signup .button { margin: 0 .5em 0 .5em; } }
+@media screen and (min-width: 56.25em) { #mc_embed_signup .button { margin: 0 0 2em 0; } }
 
 #mc_embed_signup label { font-size: 150%; font-weight: 700; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
 @media screen and (min-width: 56.25em) { #mc_embed_signup label { font-size: 200%; } }
 
-#mc_embed_signup input.email, #mc_embed_signup input.name { -webkit-border-radius: 0.625em; -moz-border-radius: 0.625em; border-radius: 0.625em; font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 100%; color: #616161; padding: .75em 1.5em; cursor: text; margin: .5em 0; width: 100%; }
+#mc_embed_signup input.email, #mc_embed_signup input.name { -webkit-border-radius: 0.625em; -moz-border-radius: 0.625em; border-radius: 0.625em; font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 100%; color: #616161; padding: .75em 1.5em .75em 1em; cursor: text; margin: .5em 0; width: 100%; }
 
 #mc_embed_signup div#mce-responses { float: left; top: -1.4em; padding: 0em .5em 0em .5em; overflow: hidden; width: 90%; margin: 0 5%; clear: both; }
 
@@ -345,10 +345,10 @@ html[xmlns] .slides { display: block; }
 
 #mc_embed_signup label.error { display: block; float: none; width: auto; margin-left: 1.05em; text-align: left; padding: .5em 0; }
 
-#mc_embed_signup .indicates-required { color: #212121; padding-left: .6em; padding-right: .6em; }
-@media screen and (min-width: 56.25em) { #mc_embed_signup .indicates-required { padding-left: .5em; padding-right: .5em; } }
+#mc_embed_signup .indicates-required { color: #212121; padding-left: 0; padding-right: 0; }
+@media screen and (min-width: 56.25em) { #mc_embed_signup .indicates-required { padding-left: 0; padding-right: 0; } }
 
-#mc_embed_signup .mc-field-group { width: 100%; max-width: 27em; padding: 0 .6em; }
-@media screen and (min-width: 56.25em) { #mc_embed_signup .mc-field-group { padding: 0em .5em; } }
+#mc_embed_signup .mc-field-group { width: 100%; max-width: 27em; padding: 0; }
+@media screen and (min-width: 56.25em) { #mc_embed_signup .mc-field-group { padding: 0; } }
 
-#mc_embed_signup .mc-field-group .asterisk { position: absolute; right: 1.25em; top: .4em; font-size: 150%; }
+#mc_embed_signup .mc-field-group .asterisk { position: absolute; right: .6em; top: .4em; font-size: 150%; }
