--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -70,7 +70,8 @@ $font-serif: "ff-tisa-web-pro",Georgia,serif;
 // This number should be reflected in .left_container, .right_container, and .bottom-nav as well.
 $section-spacing-wide: 2.5em; 
 //This number should be reflected in button.show-me-more as well.
-$section-spacing-narrow: 1.4em; 
+$section-spacing-narrow: 1.75em; 
+$section-spacing-narrow-runningtext: 1.4em;
 $wide-padding-topbottom: 2.5em;
 $hover: 0.85;
 $seth-brand-color: rgba(60,184,120,1.0);
@@ -139,13 +140,14 @@ p, ul {
 		letter-spacing: .138em;
 		text-transform:uppercase;
 		color:rgba(153,153,153,1.0);	
-		padding-left:1.2em;
-		padding-right: 1.2em;
+		padding-left:0.2em;
+		padding-right:0.2em;
 		padding-bottom: 0;	
+		margin-top:1em;
 		@media screen and (min-width: $width-medium) { 
-			padding-left:1.7em;
-			padding-right: 1.7em;
-			max-width:87.667em;		
+			max-width:87.667em;	
+			padding-left:0.2em;
+			padding-right:0.2em;	
 		}
 	}
 }
@@ -251,8 +253,8 @@ a { text-decoration:none;
 }
 
 h2 + p, h2 + ul {
-	padding-left:.6em;
-	padding-right: .6em;	
+	padding-left:0; //was .6em
+	padding-right:0;	 //was .6em
 		@media screen and (min-width: $width-medium) { 
 			padding-left:.1em;
 			padding-right:.1em;		
@@ -260,8 +262,9 @@ h2 + p, h2 + ul {
 }
 
 h3 + p, h3 + ul, h3 + p + p {
-	padding-left:.6em;
-	padding-right: .6em;	
+	padding-left:0; //was .6em
+	padding-right:0;	 //was .6em
+	padding-top:.25em;
 		@media screen and (min-width: $width-medium) { 
 			padding-left:.05em;
 			padding-right:.05em;		
@@ -283,8 +286,10 @@ h3 + p, h3 + ul, h3 + p + p {
 	font-family: $font-sans;
 	padding:0;
 	width: 100%;	
+	line-height:1.4;
 	@media screen and (min-width: $width-medium) { 
 			max-width:20em;	
+			line-height:inherit;
 	}	
 }
 .column_content {
@@ -299,7 +304,7 @@ h3 + p, h3 + ul, h3 + p + p {
 	}
 }
 .thumb-text-wrap {
-	padding:1.4em;	
+	padding: $section-spacing-narrow;	 //was 1.4em
 	h3 {
 		color:rgba(33,33,33,1.0);
 		line-height:1.33em;	
@@ -561,7 +566,7 @@ footer {
 	text-transform:uppercase;
 	letter-spacing:.1em;
 	color:rgba(255,255,255,0.7);
-	padding:0 .6em;	
+	padding:0 .2em;	
 	@media screen and (min-width: $width-medium) { 
 		padding:0 .3em;	
 	}
@@ -928,7 +933,7 @@ html[xmlns] .slides {display: block;}
 	@include rounded(.625em);
 	font-family:$font-sans;
 	font-size:100%;
-	padding:.8em 2em;
+	padding:.75em 1.5em;
 	cursor:pointer;
 	border:1px solid rgba(117,117,117,1.0);
 	-webkit-transition: all .2s ease-in-out;
@@ -936,13 +941,13 @@ html[xmlns] .slides {display: block;}
   	-o-transition: all .2s ease-in-out;
   	transition: all .2s ease-in-out;
 	display:block;
-	margin:0 .6em 1em .6em;
+	margin:0 0 2em 0;
 	&:hover {
 		background-color: rgba(66,66,66,1.0);
 		border:1px solid rgba(66,66,66,1.0);	
 	}
 	@media screen and (min-width: $width-medium) { 
-		margin:0 .5em 0 .5em;
+		margin:0 0 2em 0;
 	}
 }
 #mc_embed_signup label {
@@ -961,7 +966,7 @@ html[xmlns] .slides {display: block;}
 	font-family:$font-sans;
 	font-size:100%;
 	color:rgba(97,97,97,1.0);
-	padding:.75em 1.5em;
+	padding:.75em 1.5em .75em 1em;
 	cursor:text;
 	margin:.5em 0;
 	width:100%;
@@ -973,19 +978,19 @@ html[xmlns] .slides {display: block;}
 #mc_embed_signup label.error{display:block;float:none;width:auto;margin-left:1.05em;text-align:left;padding:.5em 0;}
 #mc_embed_signup .indicates-required{
 	color:rgba(33,33,33,1.0);
-	padding-left:.6em;
-	padding-right:.6em;	
+	padding-left:0;
+	padding-right:0;	
 	@media screen and (min-width: $width-medium) { 
-		padding-left:.5em;
-		padding-right:.5em;
+		padding-left:0;
+		padding-right:0;
 	}
 }
 #mc_embed_signup .mc-field-group{
 	width:100%;
 	max-width:27em;
-	padding:0 .6em;
+	padding:0;
 	@media screen and (min-width: $width-medium) { 
-		padding:0em .5em;
+		padding:0;
 	}
 }
-#mc_embed_signup .mc-field-group .asterisk{position:absolute;right:1.25em;top:.4em;font-size:150%}
+#mc_embed_signup .mc-field-group .asterisk{position:absolute;right:.6em;top:.4em;font-size:150%}
