--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -86,7 +86,7 @@ h3 + p, h3 + ul, h3 + p + p { padding-left: 0; padding-right: 0; padding-top: .2
 @media screen and (min-width: 56.25em) { h3 + p, h3 + ul, h3 + p + p { padding-left: .05em; padding-right: .05em; } }
 
 .main-wrapper { position: relative; margin: 0 auto; max-width: 90em; width: 100%; background-color: white; }
-@media screen and (min-width: 56.25em) { .main-wrapper { margin-bottom: 4em; } }
+@media screen and (min-width: 56.25em) { .main-wrapper { margin-bottom: 4em; width: 90%; } }
 
 .title { font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; padding: 0; width: 100%; line-height: 1.4; }
 @media screen and (min-width: 56.25em) { .title { max-width: 20em; line-height: inherit; } }
@@ -113,10 +113,10 @@ h3 + p, h3 + ul, h3 + p + p { padding-left: 0; padding-right: 0; padding-top: .2
 html.no-touch .thumb-image img { opacity: .9; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
 html.no-touch .thumb-image img:hover { opacity: 1.0; }
 
-.project-callout-shell { padding: 2.5em; line-height: 1.45; background-color: rgba(0, 0, 0, 0.15); }
+.project-callout-shell { padding: 3em; line-height: 1.5; background-color: rgba(0, 0, 0, 0.15); }
 .project-callout-shell .project-callout { font-size: 140%; color: #424242; padding-bottom: 0; }
-@media screen and (min-width: 56.25em) { .project-callout-shell .project-callout { font-size: 200%; } }
-@media screen and (min-width: 56.25em) { .project-callout-shell { padding: 7%; } }
+@media screen and (min-width: 56.25em) { .project-callout-shell .project-callout { font-size: 160%; } }
+@media screen and (min-width: 56.25em) { .project-callout-shell { padding: 7%; line-height: 1.6; } }
 
 .column-1-of-3 { display: table-cell; width: 100%; float: left; }
 @media screen and (min-width: 56.25em) { .column-1-of-3 { width: 33.33%; padding-right: .15em; } }
@@ -129,7 +129,7 @@ html.no-touch .thumb-image img:hover { opacity: 1.0; }
 
 .running { background-color: #ccc364; }
 
-.theakkermans { background-color: #bebebe; }
+.theakkermans { background-color: #d7d7d7; }
 
 .dark { background-color: #424242; color: white; }
 .dark .project-callout { color: white; }
@@ -138,13 +138,13 @@ html.no-touch .thumb-image img:hover { opacity: 1.0; }
 
 .luxuryfashion { background-color: #c2aa53; }
 
-.scadux, .logo-color { background-color: #e6e6e6; }
+.scadux, .logo-color { background-color: #d7d7d7; }
 
-.absolutehorseradish { background-color: #4ec99b; }
+.absolutehorseradish { background-color: #d7d7d7; }
 
-.absolutehorseradish-video { background-color: rgba(0, 0, 0, 0.15); }
+.absolutehorseradish-video, .foolsquest-video { background-color: #323232; }
 
-.project-types { font: 400 100%/1.65 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; color: #616161; text-transform: uppercase; letter-spacing: .05em; margin-bottom: 2em; padding-bottom: 0; }
+.project-types { font: 400 100%/1.4 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; color: #616161; text-transform: uppercase; letter-spacing: .05em; margin-bottom: 2em; padding-bottom: 0; }
 
 .read-more { display: none; }
 @media screen and (min-width: 56.25em) { .read-more { display: block; } }
@@ -179,7 +179,8 @@ footer ul { margin-bottom: 1.25em; }
 footer ul li a { color: rgba(255, 255, 255, 0.7); }
 html.no-touch footer ul li a:hover { color: white; }
 @media screen and (min-width: 56.25em) { footer ul li { display: inline-block; } }
-@media screen and (min-width: 56.25em) { footer { padding: 2.5em 2.5em; }
+@media screen and (min-width: 30em) { footer { padding: 2.5em; } }
+@media screen and (min-width: 56.25em) { footer { padding: 2.5em 2.5em; width: 90%; }
   footer ul li { margin-right: 1.25em; }
   footer ul li:last-child { margin-right: 0; } }
 
@@ -192,7 +193,7 @@ nav { overflow: hidden; position: relative; width: 100%; max-width: 90em; z-inde
 nav h1 { line-height: 2.25; }
 nav ul { font-size: 110%; }
 @media screen and (min-width: 30em) { nav { padding: 2em 2.75em; } }
-@media screen and (min-width: 56.25em) { nav { display: block; padding: 3em 2.5em; height: 9.688em; } }
+@media screen and (min-width: 56.25em) { nav { display: block; padding: 3em 2.5em; height: 9.688em; width: 90%; } }
 
 .header-logo { font-size: 150%; float: left; display: block; z-index: 100; position: relative; }
 .header-logo a { color: inherit; }
@@ -257,6 +258,8 @@ html.no-touch .navicon-button:hover .navicon:before, html.no-touch .navicon-butt
 
 .owl_colors { color: #333333; }
 
+.test_mouse_test { background-color: #b0dcdd; }
+
 .flex-container a:active, .flexslider a:active, .flex-container a:focus, .flexslider a:focus { outline: none; }
 
 .slides, .flex-control-nav, .flex-direction-nav { margin: 0; padding: 0; list-style: none; max-width: 100%; }
@@ -311,7 +314,7 @@ html[xmlns] .slides { display: block; }
 
 @media screen and (max-width: 860px) { .flex-direction-nav .flex-prev { opacity: 1; left: 0; }
   .flex-direction-nav .flex-next { opacity: 1; right: 0; } }
-.flexslider { padding: 1.25em 1.25em 1.3em 1.25em; background-color: #eeeeee; }
+.flexslider { padding: 1.25em 1.25em 1.3em 1.25em; background-color: #d7d7d7; }
 @media screen and (min-width: 56.25em) { .flexslider { padding: 5em 5em 2em 5em; } }
 
 .white-bg { background-color: white; }
