Edited hyperlink color to match brand color

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -194,6 +194,9 @@ header {
 	@media screen and (min-width: $width-tiny) { 
 		padding: $section-spacing-wide;
 	}
+	& a {
+		color:$seth-brand-color;	
+	}
 	&.process {
 		h3.title {
 			border-bottom:none;	
