--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -52,6 +52,7 @@ header { padding: 1.75em; }
 
 .documentation { padding: 1.75em; }
 @media screen and (min-width: 30em) { .documentation { padding: 2.5em; } }
+.documentation a { color: #3cb878; }
 .documentation.process h3.title { border-bottom: none; }
 .documentation.process .project-detail-heading { padding-left: .85em; padding-right: .85em; }
 .documentation.process .project-detail-content { padding-left: .6em; padding-right: .6em; padding-bottom: .6em; }
