--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -143,6 +143,9 @@ html.no-touch .thumb-image img:hover { opacity: 1.0; }
 
 .absolutehorseradish { background-color: #d7d7d7; }
 
+.scadcoursecards { background-color: #2c3f4f; }
+.scadcoursecards .project-callout { color: white; }
+
 .absolutehorseradish-video, .foolsquest-video { background-color: #323232; }
 
 .project-types { font: 400 100%/1.4 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; color: #616161; text-transform: uppercase; letter-spacing: .05em; margin-bottom: 2em; padding-bottom: 0; }
